--- a/14/styles/style.css
+++ b/14/styles/style.css
@@ -14,13 +14,8 @@
   font-display: swap;
 }
 
-/**,
-*::before,
-*::after {
-  box-sizing: border-box;
-}*/
 
-.img {
+img {
   max-width: 100%;
   height: auto;
   object-fit: contain;
@@ -79,17 +74,18 @@ body {
 }
 
 .navigation-icon {
+  position: relative;
   display: block;
   box-sizing: border-box;
   outline: none;
-  margin-bottom: -6px;
-  z-index: 1;
+  margin-bottom: -11px;
   top: 0;
+  z-index: 0;
 }
 
 .navigation-icon:focus,
 .navigation-icon:hover {
-  opacity: 90%;
+  opacity: 70%;
 }
 
 .navigation_list {
@@ -188,8 +184,10 @@ body {
 }
 
 .navigation-icons__link:focus,
-.navigation-icons__link:hover {
+.navigation-icons__link:hover,
+.navigation-icons__link:focus-visible {
   opacity: 30%;
+  outline: none;
 }
 
 /*Main container */
@@ -199,9 +197,10 @@ body {
 }
 
 .main-index-welcome {
-  background-image: url("../images/index-background.jpg");
+  background-image: url("../images/index-background.jpg"), url("./images/index_vector.svg");
   background-size: 100% auto;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat, no-repeat;
+  background-position: center, bottom;
   text-align: center;
   color: #ffffff;
   background-color: rgba(131, 179, 211, 12);
@@ -291,7 +290,7 @@ body {
   height: 2px;
   background-color: rgba(255, 255, 255, 0.30);
   display: block;
-  margin: 30px auto 30px auto;
+  margin: 29px auto 29px auto;
 }
 
 .advatages_item__text_title::after {
@@ -336,8 +335,6 @@ body {
   align-items: center;
   color: #ffffff;
   background: hsl(204, 48%, 67%);
-  height: 385px;
-  min-height: 385px;
 }
 
 .advantages_photo_text {
@@ -347,7 +344,6 @@ body {
   align-items: center;
   padding: 103px 85px;
   width: 230px;
-  min-height: 179px;
   background-color: hsl(204, 48%, 67%);
 }
 
@@ -648,14 +644,20 @@ body {
   line-height: 24px;
 }
 
+/* focus */
 .mailing-form-line:focus {
   border-radius: 4px;
   outline: 3px solid #83b3d3;
   background: #e6e6e6;
 }
+/* hover */
 
 .mailing-form-line:hover {
   background: #e6e6e6;
+}
+
+.mailing-form:disabled {
+  border: 2px solid #0000004d;
 }
 
 .mailing-form-button {
@@ -705,7 +707,8 @@ body {
 }
 
 .footer_contact__link:hover,
-.footer_contact__link:focus {
+.footer_contact__link:focus,
+.footer_contact__link:focus-visible {
   color: #756157;
 }
 
@@ -836,6 +839,10 @@ body {
 .breadcrumbs__link__hotels {
   text-decoration: none;
   color: #ffffff;
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 21px;
 }
 
 .breadcrumbs__link__hotels:hover {
@@ -850,7 +857,7 @@ body {
   color: #ffffff4d;
 }
 
-.catalog_filter__form {
+.filter_infrastructure {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -858,24 +865,17 @@ body {
   margin-top: 40px;
 }
 
-.filter_infrastructure {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-self: stretch;
-  padding: 0;
-  width: 100%;
-}
-
 .filter {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
   gap: 70px;
+  margin: 0 70px 0 0;
+  padding: 0;
+  border: none;
 }
 
 .infra {
-  width: 150px;
   display: flex;
   flex-direction: column;
   padding: 0;
@@ -883,8 +883,11 @@ body {
   border: none;
 }
 
-.infra p {
+.infra_right {
+  margin: 0;
+  padding: 0;
   text-align: left;
+  margin-right: 70px;
 }
 
 .filter_infrastructure__checbox,
@@ -905,21 +908,82 @@ body {
   gap: 16px;
 }
 
+/* Control */
+.control {
+  position: relative;
+  display: block;
+  padding-left: 36px;
+}
+
+/* Mark */
+.control-mark {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 20px;
+  height: 20px;
+  border-radius: 4px;
+  background-color: #ffffff;
+}
+
+.control:hover .control-mark {
+  border-color: #ffffff;
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.control-input:disabled + .control-mark {
+  opacity: 0.7;
+  cursor: pointer;
+}
+
+.control-input[type="checkbox"]:checked + .control-mark {
+  background-image: url("../images/catalog/vectors/tick.svg");
+  background-repeat: no-repeat;
+  background-position: 4px 6px;
+}
+
+.control-input[type="checkbox"]:checked + .control-mark::before,
+.control-input[type="checkbox"]:checked + .control-mark::after {
+  content: "";
+  background-image: url("images/catalog/vectors/tick.svg");
+}
+
+/* Radio */
+.control-item[type="radio"] + .control-mark {
+  border-radius: 50%;
+}
+
+.control-item[type="radio"]:checked + .control-mark::before {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 10px;
+  height: 10px;
+  background-color: #3f5e72;
+  border-radius: 50%;
+  content: "";
+}
+
+/* Label */
+.control-label {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 23px;
+  cursor: pointer;
+}
+
 .house_type_list {
   margin-right: auto;
 }
 
-.checkbox input {
-  border-radius: 4px;
-  background: #ffffff;
-}
-
-.filter_swimmingpool .filter_parking .filter_wifi {
+.filter-infrastructure-item {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 16px;
-  margin-top: 32px;
 }
 
 .filter-category {
@@ -931,6 +995,10 @@ body {
   box-sizing: border-box;
   outline: none;
   margin-right: auto;
+  background-image: url("../images/catalog/vectors/Vector_arrow_down.svg");
+  background-repeat: no-repeat;
+  background-position: right 20px center;
+  appearance: none;
 }
 
 .filter-category:hover,
@@ -938,20 +1006,29 @@ body {
   border-color: rgb(104, 162, 202);
 }
 
-.form-container {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  gap: 70px;
-  height: 100%;
+.filter-option {
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px;
+  color: #333333;
+  padding: 0;
 }
 
 .form-container-value {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  gap: 32px;
-  width: 288px;
+  gap: 36px;
+  margin-top: 32px;
+}
+
+.form {
+  display: flex;
+  margin: 0 70px 0 auto;
+  padding: 0;
+  border: none;
+  justify-content: flex-end;
 }
 
 .form-container-title {
@@ -960,8 +1037,8 @@ body {
   font-weight: 700;
   line-height: 24px;
   text-transform: capitalize;
-  margin: 0;
   padding: 0;
+  text-align: left;
 }
 
 .form-container-inputs {
@@ -970,17 +1047,66 @@ body {
   gap: 2px;
 }
 
-.price-from {
-  display: flex;
+.form-container-from,
+.form-container-to {
+  position: relative;
+}
+
+.price-from-number {
   padding: 12px 20px;
   justify-content: space-between;
   align-items: center;
   border-radius: 4px 0 0 4px;
-  background: #f2f2f2;
+  background-color: #f2f2f2;
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
   width: 103px;
+}
+
+.price-to-number {
+  border-radius: 0 4px 4px 0;
+  background-color: #f2f2f2;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  width: 103px;
+  padding: 12px 20px;
+}
+
+.price-from-number:hover,
+.price-to-number:hover {
+  background-color: #e6e6e6;
+}
+
+.price-from-number:focus,
+.price-from-number:focus-visible,
+.price-to-number:focus,
+.price-to-number:focus-visible {
+  outline: 3px solid #83b3d3;
+  background: #e6e6e6;
+}
+
+.price-from-number::-webkit-outer-spin-button,
+.price-from-number::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+.price-from-number[type="number"] {
+  appearance: textfield;
+}
+
+.price-from-number span {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #000000;
+  opacity: 0.3;
+  position: absolute;
+  top: 50%;
+  transform: rotateY(-50%);
+  right: 20px;
 }
 
 .price-to {
@@ -996,16 +1122,82 @@ body {
   width: 103px;
 }
 
+.range-scale {
+  position: relative;
+  height: 4px;
+  background: #ffffff4d;
+  border-radius: 2px;
+}
+
+.range-bar {
+  position: absolute;
+  height: 4px;
+  background-color: #ffffff;
+}
+
+.range-toggle {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.range-toggle:focus,
+.range-toggle:focus-visible {
+  outline: 3px solid #83b3d3;
+}
+
+.range-toggle:active {
+  outline: 2px solid #83b3d3;
+}
+
+.toggle-min {
+  left: 0;
+  top: -8px;
+}
+
+.toggle-max {
+  left: 220px;
+  top: -8px;
+}
+
+.price-from-number::-webkit-outer-spin-button,
+.price-to-number::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+.price-from-number[type="number"] {
+  appearance: textfield;
+}
+
 .slider {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 32px;
+  gap: 22px;
   font-size: 16px;
   font-family: "PT Sans", sans-serif;
   font-weight: 700;
   line-height: 20px;
   text-transform: uppercase;
+  justify-content: flex-end;
+}
+
+.form-container-from span,
+.form-container-to span {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #000000;
+  opacity: 0.3;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 20px;
 }
 
 
@@ -1092,6 +1284,7 @@ body {
   font-size: 20px;
   line-height: 24px;
   text-transform: capitalize;
+  padding: 0;
 }
 
 .form-container span {
@@ -1107,6 +1300,7 @@ body {
   display: inline-block;
   font-style: normal;
   color: #ffffff;
+  font-family: "PT Sans", sans-serif;
   background-color: rgb(130, 179, 211);
   font-weight: 700;
   font-size: 16px;
@@ -1114,6 +1308,7 @@ body {
   border-radius: 4px;
   padding: 8px 50px;
   text-transform: uppercase;
+  border: none;
 }
 
 .slider-button-from:focus,
@@ -1137,8 +1332,8 @@ body {
   opacity: 0.6;
 }
 
-.slider-button-to:focus {
-  outline: 3px solid rgb(131, 179, 211);
+.slider-button-to:active {
+  opacity: 0.6;
 }
 
 .hotel {
@@ -1157,6 +1352,18 @@ body {
   line-height: 28px;
   margin: 0;
   padding: 0 0 40px 0;
+  position: relative;
+}
+
+.hotel-list::after {
+  position: absolute;
+  display: block;
+  flex-grow: 1;
+  content: "";
+  width: 100%;
+  height: 1px;
+  bottom: 0;
+  background-color: #e6e6e6;
 }
 
 .hotel-card {
@@ -1186,7 +1393,7 @@ body {
   opacity: 0.8;
 }
 
-.hotel-card h3 {
+.hotel-card-title {
   margin: 0;
   display: block;
   grid-column: -1/1;
@@ -1198,6 +1405,11 @@ body {
   border: none;
   padding: 0;
   width: 300px;
+  text-decoration: none;
+}
+
+.hotel-card-title:hover {
+  opacity: 0.5;
 }
 
 .value {
@@ -1259,6 +1471,7 @@ body {
   text-align: center;
   border: none;
   width: 140px;
+  cursor: pointer;
 }
 
 .hotel-follow:hover,
@@ -1357,7 +1570,6 @@ body {
 .pagination-active {
   background: hsl(0, 0%, 95%);
   border-radius: 4px;
-  cursor: none;
 }
 
 .pagination-active:hover,
@@ -1365,11 +1577,14 @@ body {
 .pagination-active:focus-visible {
   background: hsl(0, 0%, 95%);
   outline: none;
-  cursor: none;
+  pointer-events: none;
+  cursor: default;
 }
 
 .pagination-active a {
   color: #000000;
+  pointer-events: none;
+  cursor: default;
 }
 
 .pagination-hidden {
@@ -1460,7 +1675,6 @@ body {
 /* Buttons */
 .navigation-icons__items__button {
   display: inline-block;
-  font-family: inherit;
   padding: 8px 50px;
   font-weight: 700;
   font-size: 16px;
@@ -1472,6 +1686,7 @@ body {
   text-decoration: none;
   margin-left: 20px;
   outline: none;
+  font-family: "PT Sans", sans-serif;
 }
 
 .navigation-icons__items__button:hover,
@@ -1503,4 +1718,323 @@ body {
   bottom: 0;
   left: 0;
   margin: auto;
+}
+
+/* Modal */
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  background: rgba(242, 242, 242, 0.8);
+}
+
+.modal-container-close {
+  /* display: none; */
+}
+
+.modal {
+  position: relative;
+  margin: auto;
+  padding: 64px 70px;
+  border-radius: 30px;
+  background: #ffffff;
+  box-shadow: 0 25px 50px 0 rgba(0, 0, 0, 0.15);
+}
+
+.modal-auth {
+  width: 577px;
+}
+
+.modal-close-button {
+  position: absolute;
+  width: 52px;
+  height: 52px;
+  top: 64px;
+  right: 52px;
+  padding: 0;
+  background-image: url("../images/modal/cross.svg");
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  background-position: center;
+  border-radius: 50%;
+  background-color: #f2f2f2;
+}
+
+.modal-close-button:hover {
+  background-color: #E6E6E6;
+}
+
+.modal-close-button:focus-visible,
+.modal-close-button:focus {
+  outline: 3px solid #83b3d3;
+  background-color: #E6E6E6;
+}
+
+
+
+.modal-title {
+  margin: 0 0 64px 0;
+  padding: 0;
+  font-family: "PT Sans", sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 36px;
+  text-transform: uppercase;
+  color: #000000;
+}
+
+.auth-form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.field-group {
+  margin: 0;
+  margin-bottom: 23px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.enjoy-text {
+  font-family: "PT Sans", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  max-width: 135px;
+  color: #000000;
+}
+
+.input-date {
+  font-family: "PT Sans", sans-serif;
+  padding: 12px 20px;
+  width: 400px;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  color: #000000;
+  background-image: url("../images/modal/calendar.svg");
+  background-repeat: no-repeat;
+  background-position: center right 20px;
+  background-color: #f2f2f2;
+  border: none;
+}
+
+.modal-error,
+.modal-description {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px;
+  color: #ff5757;
+  margin-left: 137px;
+  padding: 4px 20px;
+}
+
+.modal-description {
+  color: #333333;
+}
+
+.modal-quantity {
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 577px;
+  margin-bottom: 48px;
+}
+
+.modal-ages,
+.modal-child {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.ages-title {
+  font-family: "PT Sans", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+  margin: 12px 46px 12px 0;
+}
+
+.yang-title {
+  margin: 0;
+}
+
+.quantity-button {
+  display: flex;
+  padding: 14px 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 20px;
+  height: 20px;
+}
+
+.number {
+  padding: 14px 10px;
+  width: 20px;
+  border-radius: 0;
+  background-color: #f2f2f2;
+  border: none;
+  color: #000000;
+  text-align: center;
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px;
+}
+
+.number::-webkit-outer-spin-button,
+.number::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+.less,
+.more {
+  border: none;
+  padding: 0;
+  margin: 0;
+  width: 40px;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.less {
+  border-radius: 4px 0 0 4px;
+}
+
+.more {
+  border-radius: 0 4px 4px 0;
+}
+
+.quantity-button:hover path {
+  fill: #000000;
+  fill-opacity: 1;
+}
+
+.quantity-button:focus svg {
+  outline: 3px solid #82B3D3;
+  border-radius: 4px;
+}
+
+.quantity-button:active path {
+  fill: #000000;
+  fill-opacity: 1;
+}
+
+/* Tooltip */
+
+.tooltip-group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.tooltip {
+  width: 26px;
+  height: 26px;
+  margin-left: 10px;
+  margin-right: 46px;
+  position: relative;
+}
+
+.tooltip-icon-less,
+.tooltip-icon-more {
+  width: 20px;
+  height: 20px;
+}
+
+.tooltip-toggle {
+  margin: 0;
+  padding: 0;
+  border: none;
+  display: block;
+  position: relative;
+  background: transparent;
+}
+
+.tooltip-toggle:hover .tooltip-icon {
+  opacity: 0.8;
+}
+
+.tooltip-text {
+  background-color: #333333;
+  color: #ffffff;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: none;
+  padding: 15px 18px 18px 22px;
+  border-radius: 10px;
+  width: 256px;
+  box-shadow: 0 15px 30px 0 #0000004d;
+  position: absolute;
+  top: 100%;
+  margin-top: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 3;
+  display: none;
+}
+
+.tooltip-text::before {
+  content: "";
+  background-image: url("../images/modal/triangle\ 1.svg");
+  background-repeat: no-repeat;
+  position: absolute;
+  width: 19px;
+  height: 9px;
+  left: 50%;
+  transform: translateX(-50%);
+  top: -9px;
+}
+
+.tooltip-toggle:hover + .tooltip-text,
+.tooltip-toggle:focus + .tooltip-text {
+  display: block;
+}
+
+.modal-button {
+  display: flex;
+  width: 577px;
+  padding: 18px 77px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  background: #83b3d3;
+  color: #ffffff;
+  text-align: center;
+  font-family: "PT Sans", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+  text-transform: uppercase;
+  border: none;
+}
+
+.modal-button:focus,
+.modal-button:hover {
+  background-color: #68a2ca;
+}
+
+.modal-button:active {
+  color: #ffffff4d;
 }
