--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,7 @@ body {
   font-size: 24px;
   line-height: 28px;
   color: #000000;
-  background-color: #ffffff;
+  background-color: #f2f2f2;
   text-align: center;
 }
 
@@ -71,6 +71,7 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 64px;
+  background-color: #ffffff;
 }
 
 .navigation-icon {
@@ -197,6 +198,7 @@ body {
 }
 
 .main-index-welcome {
+  position: relative;
   background-image: url("../images/index-background.jpg"), url("./images/index_vector.svg");
   background-size: 100% auto;
   background-repeat: no-repeat, no-repeat;
@@ -205,6 +207,17 @@ body {
   color: #ffffff;
   background-color: rgba(131, 179, 211, 12);
   padding: 51px 371px 82px 371px;
+}
+
+.main-index-welcome::before {
+  content: "";
+  position: absolute;
+  background-image: url("../images/index_vector.svg");
+  bottom: 0;
+  width: 1200px;
+  height: 57px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .main-index-welcome-image {
@@ -249,20 +262,22 @@ body {
 
 .advantages_head {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   width: 1200px;
-  height: 123px;
   padding: 69px 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 25px;
+  margin-bottom: 21px;
 }
 
 .advantages__text {
+  font-family: "PT Sans", sans-serif;
   width: 620px;
   height: auto;
   font-weight: 700;
   font-size: 30px;
+  line-height: 36px;
   text-transform: uppercase;
   margin: 0;
 }
@@ -319,7 +334,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 103px 85px;
+  padding: 113px 85px;
   width: 230px;
   font-style: normal;
   background: rgba(131, 179, 211, 0.12);
@@ -342,7 +357,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 103px 85px;
+  padding: 100px 85px;
   width: 230px;
   background-color: hsl(204, 48%, 67%);
 }
@@ -429,7 +444,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 30px;
   width: 100%;
   list-style: none;
   padding: 80px 85px;
@@ -441,11 +455,12 @@ body {
 }
 
 .service_item__text {
+  margin: 30px 0;
+  font-family: "PT Sans", sans-serif;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
-  margin: 0;
 }
 
 .service_item__description {
@@ -456,6 +471,7 @@ body {
   text-transform: none;
   color: #333333;
   margin: 0;
+  font-family: "PT Sans", sans-serif;
 }
 
 .interest {
@@ -695,6 +711,7 @@ body {
   line-height: 40px;
   text-transform: uppercase;
   align-items: center;
+  font-style: normal;
   justify-content: center;
   text-decoration: none;
   color: #000000;
@@ -717,8 +734,10 @@ body {
 }
 
 .footer-htmlacademy-link {
-  width: 115px;
-  height: 33px;
+  display: flex;
+  text-decoration: none;
+  color: #000000;
+  margin: 0;
 }
 
 .footer-htmlacademy-link:hover path,
@@ -738,9 +757,10 @@ body {
 .social {
   display: flex;
   justify-content: space-between;
-  height: 40px;
-  padding: 40px 70px 30px 70px;
+  min-height: 40px;
+  padding: 45px 70px 30px 70px;
   align-items: center;
+  background-color: #ffffff;
 }
 
 .social__list {
@@ -773,9 +793,8 @@ body {
   background-color: hsl(204, 48%, 67%);
   background-repeat: no-repeat;
   background-size: cover;
-  max-height: 422px;
   max-width: 1060px;
-  padding: 35px 70px 60px;
+  padding: 35px 70px 63px;
 }
 
 .catalog_filter h1 {
@@ -832,8 +851,11 @@ body {
 }
 
 .breadcrumbs__link__home:hover,
-.breadcrumbs__link__home:focus {
+.breadcrumbs__link__home:focus,
+.breadcrumbs__link__home:focus-visible {
   opacity: 0.5;
+  border: none;
+  outline: none;
 }
 
 .breadcrumbs__link__hotels {
@@ -845,8 +867,10 @@ body {
   line-height: 21px;
 }
 
-.breadcrumbs__link__hotels:hover {
+.breadcrumbs__link__hotels:hover,
+.breadcrumbs__link__hotels:focus-visible{
   color: #ffffff99;
+  outline: none;
 }
 
 .breadcrumbs__link__hotels:focus {
@@ -866,11 +890,11 @@ body {
 }
 
 .filter {
+  text-align: left;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-  gap: 70px;
-  margin: 0 70px 0 0;
+  margin: 0 64px 0 0;
   padding: 0;
   border: none;
 }
@@ -913,6 +937,27 @@ body {
   position: relative;
   display: block;
   padding-left: 36px;
+  cursor: pointer;
+}
+
+.control:hover {
+  opacity: 0.6;
+}
+
+.control:disabled {
+  opacity: 0.3;
+}
+
+.control:checked ~ .control-label {
+  opacity: 0.6;
+}
+
+.control:focus-within .control-mark {
+  outline: 3px solid #83b3d3;
+}
+
+.control:active .control-mark {
+  outline: 2px solid #83b3d3;
 }
 
 /* Mark */
@@ -925,37 +970,33 @@ body {
   height: 20px;
   border-radius: 4px;
   background-color: #ffffff;
-}
-
-.control:hover .control-mark {
-  border-color: #ffffff;
-  opacity: 0.5;
   cursor: pointer;
 }
 
-.control-input:disabled + .control-mark {
-  opacity: 0.7;
-  cursor: pointer;
+input[type="checkbox"] ~ .control-mark {
+  border-radius: 4px;
 }
 
-.control-input[type="checkbox"]:checked + .control-mark {
+input[type="checkbox"]:checked ~ .control-mark::before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 4px;
+  width: 12px;
+  height: 10px;
   background-image: url("../images/catalog/vectors/tick.svg");
   background-repeat: no-repeat;
-  background-position: 4px 6px;
+  background-position: center;
 }
 
-.control-input[type="checkbox"]:checked + .control-mark::before,
-.control-input[type="checkbox"]:checked + .control-mark::after {
-  content: "";
-  background-image: url("images/catalog/vectors/tick.svg");
-}
 
 /* Radio */
-.control-item[type="radio"] + .control-mark {
+input[type="radio"] ~ .control-mark {
   border-radius: 50%;
 }
 
-.control-item[type="radio"]:checked + .control-mark::before {
+input[type="radio"]:checked ~ .control-mark::before {
+  content: "";
   position: absolute;
   top: 5px;
   left: 5px;
@@ -963,7 +1004,6 @@ body {
   height: 10px;
   background-color: #3f5e72;
   border-radius: 50%;
-  content: "";
 }
 
 /* Label */
@@ -999,6 +1039,11 @@ body {
   background-repeat: no-repeat;
   background-position: right 20px center;
   appearance: none;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px;
+  color: #333333;
 }
 
 .filter-category:hover,
@@ -1006,20 +1051,10 @@ body {
   border-color: rgb(104, 162, 202);
 }
 
-.filter-option {
-  font-family: "PT Sans", sans-serif;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 21px;
-  color: #333333;
-  padding: 0;
-}
-
 .form-container-value {
   display: flex;
   flex-direction: column;
-  gap: 36px;
+  gap: 43px;
   margin-top: 32px;
 }
 
@@ -1047,21 +1082,15 @@ body {
   gap: 2px;
 }
 
-.form-container-from,
-.form-container-to {
-  position: relative;
-}
-
 .price-from-number {
   padding: 12px 20px;
-  justify-content: space-between;
-  align-items: center;
   border-radius: 4px 0 0 4px;
   background-color: #f2f2f2;
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
   width: 103px;
+  border: none;
 }
 
 .price-to-number {
@@ -1070,8 +1099,9 @@ body {
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
-  width: 103px;
+  width: 100px;
   padding: 12px 20px;
+  border: none;
 }
 
 .price-from-number:hover,
@@ -1110,16 +1140,16 @@ body {
 }
 
 .price-to {
-  display: flex;
-  padding: 12px 20px;
-  justify-content: space-between;
-  align-items: center;
+  position: relative;
   border-radius: 0 4px 4px 0;
   background: #f2f2f2;
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
-  width: 103px;
+}
+
+.price-from {
+  position: relative;
 }
 
 .range-scale {
@@ -1127,6 +1157,7 @@ body {
   height: 4px;
   background: #ffffff4d;
   border-radius: 2px;
+  width: 287px;
 }
 
 .range-bar {
@@ -1160,7 +1191,7 @@ body {
 }
 
 .toggle-max {
-  left: 220px;
+  left: 206px;
   top: -8px;
 }
 
@@ -1178,13 +1209,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 22px;
+  gap: 32px;
   font-size: 16px;
   font-family: "PT Sans", sans-serif;
   font-weight: 700;
   line-height: 20px;
   text-transform: uppercase;
   justify-content: flex-end;
+  margin-bottom: -3px;
 }
 
 .form-container-from span,
@@ -1279,6 +1311,7 @@ body {
 
 .infrastructure_head,
 .house_type {
+  font-family: "PT Sans", sans-serif;
   margin: 0;
   font-weight: 700;
   font-size: 20px;
@@ -1324,6 +1357,7 @@ body {
   display: inline-block;
   background: #82b3d300;
   width: 100%;
+  margin: 0;
 }
 
 .slider-button-to:hover,
@@ -1404,7 +1438,6 @@ body {
   color: #000000;
   border: none;
   padding: 0;
-  width: 300px;
   text-decoration: none;
 }
 
@@ -1434,7 +1467,7 @@ body {
 /* buttons*/
 .hotel-card-follow {
   display: inline-block;
-  padding: 8px 20px;
+  padding: 8px 26px;
   color: #ffffff;
   background-color: #756157;
   text-transform: uppercase;
@@ -1513,7 +1546,7 @@ body {
   justify-content: space-between;
   width: 1060px;
   border-radius: 4px;
-  margin-top: 40px;
+  margin-top: 42px;
 }
 
 .pagination a {
@@ -1532,13 +1565,11 @@ body {
   width: 1060px;
   height: 60px;
   margin: 0;
-  padding: 6px;
+  padding: 0;
+  gap: 8px;
 }
 
 .pagination-list_item {
-  margin: 0 8px;
-  width: 60px;
-  height: 60px;
   border-radius: 4px;
   order: 3;
   flex-grow: 0;
@@ -1611,6 +1642,7 @@ body {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
+  background-color: #ffffff;
 }
 
 .follow-catalog__text {
@@ -1644,20 +1676,19 @@ body {
 .mailing-form {
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: center;
   width: 684px;
   min-height: 52px;
 }
 
 .mailing-form-email {
+  font-family: "PT Sans", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
   background: hsl(0, 0%, 95%);
   border-radius: 4px 0 0 4px;
   width: 452px;
-  height: 28px;
   border: none;
   padding: 12px 20px;
 }
@@ -1674,8 +1705,7 @@ body {
 
 /* Buttons */
 .navigation-icons__items__button {
-  display: inline-block;
-  padding: 8px 50px;
+  padding: 8px 35px;
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
@@ -1687,7 +1717,10 @@ body {
   margin-left: 20px;
   outline: none;
   font-family: "PT Sans", sans-serif;
+  max-width: 60px;
+  box-sizing: border-box;
 }
+
 
 .navigation-icons__items__button:hover,
 .navigation-icons__items__button:focus {
@@ -1730,10 +1763,11 @@ body {
   height: 100%;
   display: flex;
   background: rgba(242, 242, 242, 0.8);
+  text-align: start;
 }
 
 .modal-container-close {
-  /* display: none; */
+  display: none;
 }
 
 .modal {
@@ -1747,6 +1781,7 @@ body {
 
 .modal-auth {
   width: 577px;
+  height: 448px;
 }
 
 .modal-close-button {
@@ -1775,8 +1810,6 @@ body {
   background-color: #E6E6E6;
 }
 
-
-
 .modal-title {
   margin: 0 0 64px 0;
   padding: 0;
@@ -1796,7 +1829,7 @@ body {
 
 .field-group {
   margin: 0;
-  margin-bottom: 23px;
+  margin-bottom: 19px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -1813,18 +1846,22 @@ body {
 }
 
 .input-date {
-  font-family: "PT Sans", sans-serif;
+  min-width: 440px;
   padding: 12px 20px;
-  width: 400px;
+  padding-right: 50px;
+  margin-left: auto;
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
   color: #000000;
+  border: none;
+  border-radius: 4px;
+  background-color: #f2f2f2;
   background-image: url("../images/modal/calendar.svg");
   background-repeat: no-repeat;
   background-position: center right 20px;
-  background-color: #f2f2f2;
-  border: none;
+  box-sizing: border-box;
 }
 
 .modal-error,
@@ -1836,10 +1873,12 @@ body {
   color: #ff5757;
   margin-left: 137px;
   padding: 4px 20px;
+  min-height: 21px;
 }
 
 .modal-description {
   color: #333333;
+  min-height: 19px;
 }
 
 .modal-quantity {
@@ -1847,7 +1886,7 @@ body {
   justify-content: space-between;
   align-items: center;
   width: 577px;
-  margin-bottom: 48px;
+  margin: 0 0 48px 0;
 }
 
 .modal-ages,
@@ -1859,6 +1898,7 @@ body {
   align-items: center;
 }
 
+
 .ages-title {
   font-family: "PT Sans", sans-serif;
   font-size: 20px;
@@ -1866,6 +1906,7 @@ body {
   font-weight: 700;
   line-height: 24px;
   margin: 12px 46px 12px 0;
+  max-width: 100px;
 }
 
 .yang-title {
@@ -1884,7 +1925,9 @@ body {
 
 .number {
   padding: 14px 10px;
-  width: 20px;
+  width: 11px;
+  height: 20px;
+  max-height: 20px;
   border-radius: 0;
   background-color: #f2f2f2;
   border: none;
@@ -1906,7 +1949,7 @@ body {
 .less,
 .more {
   border: none;
-  padding: 0;
+  padding: 14px 10px;
   margin: 0;
   width: 40px;
   height: 48px;
@@ -1932,11 +1975,17 @@ body {
 .quantity-button:focus svg {
   outline: 3px solid #82B3D3;
   border-radius: 4px;
+  outline-offset: 4px;
 }
 
 .quantity-button:active path {
   fill: #000000;
   fill-opacity: 1;
+}
+
+.quantity-button:focus-visible {
+  border: none;
+  outline: none
 }
 
 /* Tooltip */
@@ -1955,12 +2004,6 @@ body {
   position: relative;
 }
 
-.tooltip-icon-less,
-.tooltip-icon-more {
-  width: 20px;
-  height: 20px;
-}
-
 .tooltip-toggle {
   margin: 0;
   padding: 0;
@@ -1977,12 +2020,13 @@ body {
 .tooltip-text {
   background-color: #333333;
   color: #ffffff;
+  width: 216px;
+  height: 110px;
   font-size: 16px;
   line-height: 20px;
   text-transform: none;
   padding: 15px 18px 18px 22px;
   border-radius: 10px;
-  width: 256px;
   box-shadow: 0 15px 30px 0 #0000004d;
   position: absolute;
   top: 100%;
@@ -2023,7 +2067,6 @@ body {
   text-align: center;
   font-family: "PT Sans", sans-serif;
   font-size: 20px;
-  font-style: normal;
   font-weight: 700;
   line-height: 24px;
   text-transform: uppercase;
