--- a/styles/style.css
+++ b/styles/style.css
@@ -1767,7 +1767,7 @@ input[type="radio"]:checked ~ .control-mark::before {
 }
 
 .modal-container-close {
-  display: none;
+  /* display: none; */
 }
 
 .modal {
