--- a/styles/style.css
+++ b/styles/style.css
@@ -59,7 +59,7 @@ body {
   width: 1200px;
   margin: 0 auto;
   z-index: 1;
-  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.20);
+  box-shadow: 0 -15px 15px 0 rgba(0, 0, 0, 0.20);
 }
 
 .navigation {
